# financial-tracker

./: .env.example  .gitignore  CLAUDE.md  build.sh  pyproject.toml  render.yaml  requirements.md
accounts/: CLAUDE.md  admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_account_initial_balance.py  0003_account_user.py  0004_alter_account_user.py
budgets/: CLAUDE.md  admin.py  models.py  urls.py  views.py
budgets/migrations/: 0001_initial.py  0002_remove_budget_unique_budget_category_month_and_more.py  0003_alter_budget_user.py
core/: CLAUDE.md  mixins.py  views.py
core/migrations/: 0001_assign_users.py
core/templatetags/: currency.py
expense_tracker/: CLAUDE.md  settings.py  urls.py
investments/: CLAUDE.md  admin.py  apps.py  crypto_prices.py  forms.py  models.py  performance.py  signals.py  urls.py  views.py
investments/migrations/: 0001_initial.py  0002_instrument_exchangerate_instrumentprice_and_more.py  0003_alter_investmenttransaction_transaction_type.py  0004_alter_investmenttransaction_transaction_type.py  0005_add_instrument_api_id.py  0006_instrument_user_investmenttransaction_user_and_more.py  (+1 more)
loans/: CLAUDE.md  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
recurring/: CLAUDE.md  admin.py  apps.py  forms.py  models.py  urls.py  views.py
reports/: CLAUDE.md  urls.py  views.py
tags/: CLAUDE.md  admin.py  forms.py  models.py  urls.py  views.py
templates/: base.html
transactions/: CLAUDE.md  admin.py  forms.py  models.py  signals.py  urls.py  views.py
(+66 files in other folders)
