[project]
name = "expense-tracking"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.7.0",
    "dj-database-url>=2.3.0",
    "django>=6.0.2",
    "django-browser-reload>=1.21.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.27.0",
    "django-tailwind>=4.4.2",
    "gunicorn>=23.0.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.2.0",
    "whitenoise>=6.8.0",
]
